--- a/index.html
+++ b/index.html
@@ -159,10 +159,34 @@
         </section>
 
         <!-- Projects Section -->
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Explore our latest robotics projects.</p>
-        </section>
+<section id="projects" style="padding: 60px 20px; text-align: center; background: #f9f9f9;">
+    <h2 style="font-size: 2.5rem; margin-bottom: 10px;">Projects</h2>
+    <h4 style="font-size: 1.2rem; color: #666; margin-bottom: 40px;">Explore our latest robotics projects.</h4>
+    
+    <!-- Project Card -->
+    <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; margin: 0 auto;">
+        <a href="https://shuttle3000.github.io/Orange-Square/" style="text-decoration: none; color: inherit;">
+            <img src="https://images.pexels.com/photos/3913025/pexels-photo-3913025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
+            <div style="padding: 20px;">
+                <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">M1 Bionic Arm</h1>
+            </div>
+        </a>
+    </div>
+</section>
+
+<!-- Hover Effect for Project Title -->
+<style>
+    .project-card:hover h1 {
+        color: #007BFF; /* Change text color on hover */
+         /* (text-decoration: underline;)Add underline on hover */
+        transform: scale(1.05); /* Slightly enlarge the text */
+    }
+
+    .project-card:hover {
+        transform: translateY(-10px); /* Lift the card on hover */
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+    }
+</style>
 
         <!-- About Us Section -->
         <section id="about">
