--- a/index.html
+++ b/index.html
@@ -158,19 +158,42 @@
             <div class="scale-text">innovate. iterate. inspire.</div>
         </section>
 
-        <!-- Projects Section -->
+       <!-- Projects Section -->
 <section id="projects" style="padding: 60px 20px; text-align: center; background: #f9f9f9;">
     <h2 style="font-size: 2.5rem; margin-bottom: 10px;">Projects</h2>
     <h4 style="font-size: 1.2rem; color: #666; margin-bottom: 40px;">Explore our latest robotics projects.</h4>
     
-    <!-- Project Card -->
-    <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; margin: 0 auto;">
-        <a href="https://shuttle3000.github.io/Orange-Square/" style="text-decoration: none; color: inherit;">
-            <img src="https://images.pexels.com/photos/3913025/pexels-photo-3913025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
-            <div style="padding: 20px;">
-                <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">M1 Bionic Arm</h1>
-            </div>
-        </a>
+    <!-- Container for Horizontal Boxes -->
+    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+        <!-- Project Card 1 -->
+        <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; width: 100%;">
+            <a href="https://shuttle3000.github.io/Orange-Square/A1B-AR.html" style="text-decoration: none; color: inherit;">
+                <img src="https://images.pexels.com/photos/3913025/pexels-photo-3913025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
+                <div style="padding: 20px;">
+                    <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">M1 Bionic Arm</h1>
+                </div>
+            </a>
+        </div>
+
+        <!-- Project Card 2 -->
+        <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; width: 100%;">
+            <a href="https://shuttle3000.github.io/Orange-Square/" style="text-decoration: none; color: inherit;">
+                <img src="https://images.pexels.com/photos/8439000/pexels-photo-8439000.jpeg" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
+                <div style="padding: 20px;">
+                    <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">Q T</h1>
+                </div>
+            </a>
+        </div>
+        
+        <!-- Project Card 2 -->
+        <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; width: 100%;">
+            <a href="https://shuttle3000.github.io/Orange-Square/" style="text-decoration: none; color: inherit;">
+                <img src="https://images.pexels.com/photos/31233565/pexels-photo-31233565/free-photo-of-futuristic-chrome-robot-sculpture-in-urban-setting.jpeg" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
+                <div style="padding: 20px;">
+                    <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">COMING SOON!</h1>
+                </div>
+            </a>
+        </div>
     </div>
 </section>
 
@@ -178,7 +201,7 @@
 <style>
     .project-card:hover h1 {
         color: #007BFF; /* Change text color on hover */
-         /* (text-decoration: underline;)Add underline on hover */
+         /*(text-decoration: underline;) Add underline on hover */
         transform: scale(1.05); /* Slightly enlarge the text */
     }
 
