--- a/A1B-AR.html
+++ b/A1B-AR.html
@@ -137,12 +137,12 @@
                 <img src="https://images.pexels.com/photos/8438980/pexels-photo-8438980.jpeg?auto=compress&cs=tinysrgb&w=600" alt="AI-Powered Control">
                 <div>AI-Powered Control</div>
             </div>
-            <div class="feature" onclick="redirectTo('https://www.m1bionicarm.com/lightweight-design')">
+            <div class="feature" onclick="redirectTo('https://shuttle3000.github.io/Orange-Square/dexhand.html')">
                 <div class="line" id="line-2"></div>
                 <img src="https://images.pexels.com/photos/6153738/pexels-photo-6153738.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Lightweight Design">
                 <div>Dexhand</div>
             </div>
-            <div class="feature" onclick="redirectTo('https://www.m1bionicarm.com/durable-materials')">
+            <div class="feature" onclick="redirectTo('https://shuttle3000.github.io/Orange-Square/ARTIFICIAL%20SILICONE%20SKIN.html')">
                 <div class="line" id="line-3"></div>
                 <img src="https://images.pexels.com/photos/6153346/pexels-photo-6153346.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Durable Materials">
                 <div>Artificial Silicone Skin</div>
