--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <!-- Project Card 2 -->
         <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; width: 100%;">
-            <a href="https://shuttle3000.github.io/Orange-Square/" style="text-decoration: none; color: inherit;">
+            <a href="https://shuttle3000.github.io/Orange-Square/QT.html" style="text-decoration: none; color: inherit;">
                 <img src="https://images.pexels.com/photos/8439000/pexels-photo-8439000.jpeg" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
                 <div style="padding: 20px;">
                     <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">Q T</h1>
@@ -190,7 +190,7 @@
         
         <!-- Project Card 2 -->
         <div class="project-card" style="display: inline-block; background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 400px; width: 100%;">
-            <a href="https://shuttle3000.github.io/Orange-Square/" style="text-decoration: none; color: inherit;">
+            <a href="https://shuttle3000.github.io/Orange-Square/COMING%20SOON.HTML" style="text-decoration: none; color: inherit;">
                 <img src="https://images.pexels.com/photos/31233565/pexels-photo-31233565/free-photo-of-futuristic-chrome-robot-sculpture-in-urban-setting.jpeg" alt="M1 Bionic Arm" style="width: 100%; height: auto; display: block;">
                 <div style="padding: 20px;">
                     <h1 style="font-size: 1.8rem; margin: 0; color: black; transition: color 0.3s ease, transform 0.3s ease;">COMING SOON!</h1>
